# libnes

./: .gitignore  CMakeLists.txt  LICENCE  Makefile  Makefile.base  Makefile.linux  Makefile.linux_app  README.md  app.c  app_opengl4.c  controller.h  cpunes.c  cpunes.h  debugger.c  debugger.h  exec.c  exec.h  flags.c  flags.h  flags_checking.c  flags_checking.h  handlers.c  handlers.h  instr.c  instr.h  makefile  nes_linux.c  nes_linux.h  op_name.h  opcode_exec.c  opcode_exec.h  operator_names.h  palette.c  platform_linux.c  platform_linux.h  profiling.gprof  sdl3_opengl3.c  sdl3_opengl3.h  sdl3_opengl4.c  sdl3_opengl4.h
glad/include/glad/: gl.h
linux/: platform.c
tests/: Makefile  test.c  thumb.c
